@@ -20,7 +20,7 @@ func init() {
 	// spec/endpoint.yml
 	// spec/filebeat.yml
 	// spec/metricbeat.yml
-	unpacked := packer.MustUnpack("eJy8mFuToziWx9/3Y9TrbuyCKOc2E9EPhmxudpJlnCkJvSHJBmwJuwt8gYn57hPiYoOzqrurZ6YfMjJNCulc/uecn/z3T+Vxw/5vU/DjIS+q/62l+PS3T1Q6FXk7pBGa7ZlrHmmxSt8B3HEcHLm3X8RA37/mlqAyulAgTtzWG4JCnUmhbVbHjBXRkUhnx58PKbnvUREXArsIBSvIMQbvT/5zbLw+p4sYZCIG1TZBs4a7TkmfD4vl2hIbF+4wIEfqvj/Z+Tz1besS4+jwms/z8b7sblver8uY5M1rekh9e54u1/OcS1gniMz8/hl3RUWQqSsbX5r5grlmwx21X6jF6Fq+pofKd+FngsItkaIkb4eFes/3rIy76ZNvB9/2f+1361ynJsZLb/e88u3gtrc/smu51nXm8jpGkXh4XhMcnjkOdgS/5KN9vnPuZP1pI8XlW76Gu/nFLqyaQFOnUpyYEWXUvTzZuZYSnIlYN2WCrmKIHXMdLXk+pL6EJ+JZ5wTNtCUORWzAOsHRLZ4xDgrW9DEaYo5mH3z+aEugUxc2XbzJceOYDfcCESPtyfcq0+6fUy8STJggRled4CGuVkPQVcRGdGa7Q5qg2YXjqOn/95Xg/ZPvRTPmvve5Ixn1oLjbqY31uWhjIEXJXVhj42GtFwrqwh13zfo1t460sHTuvfS5rsTmrdV6FsurIPPeV+mUHMGRDi2NFVBMfNp93H9in9oPr26fpz7OK981de5ZOp8fFhxkgu4O6dp1mhWazRY2l9SFgtvs6Nux9H/JMqYJjSC9Wdjw/xEQJ+ZBjem6uVjPZZBbfozD1xjpghlWFoP3QwD6/W1W+jYX1HUa7oodAzBjMjwE9X7x6X+6NrLNxYZukg9tRJUPCkSMV0PraCUWS5jx+bEr1dyifq47fn5J/SIU3IOXpRQlXc8ElU5OXbj/glRKQtGueVxbRIJiq4xxJJYSnmIUlAStTCKdkoH3fGnP8+V795si5xQjLiiCJ27PKgoi8QWnFXOdXVLrfcj80rf9Klqr30EVo1lGAKyIkv9of+4FOllP1pYU8CJBs2Ipr4JLWH5BkYgLWPhCW8Q40BJEsthYPfmuiknULNsWB3OCHO13yyFvJfArQaGGgTgRF34e5MU9cVHxpq5ZsEvbQo9UHlV5bJkR1QQ5FTasmoJQMCM836TnmicMwjOVpExQqHXyVm062saIaAT3La0rpSffvZ6J8dKWC0XO5bFVPJRhzdF1UnIxMC8baGbUvW65a26pKxr+fG8dvm1ptDmkg83sckhv//to64kC89KXQ/tDcLYj2NJaTRWhxiTMKH5pc5+gVfv7VqptnoMLk+aO4LChRtCoPD3YqlHdLBMcaoOvnS2qlFReRjEtXv6sH/eYSyipEXRtwlPtvq2jPlekpkB78t2+dC9DW/3p/sy4+bzo27rG1Dh2Oh8w6FrA9/L2aG+CI0HfPvoxObPTWxXj+cOofmiV3k3f95YonRMD14zfxvx8Yler69U4dnrGPOveOm/PW112+hzH2p63NdGP8fbv8Tm+bak6PXG7H325VVLAHvaGoK19I9SIK06vudVwNzrSdHoOwUTQYnXmbnh5zS0tNubf2QfumfINRZcHW9TZZ+KauwRANWr2FIRfbzU49rU2a4KiI9PNhrqmofx6za3u2Tf8XxrhjIHrmbSaFM0oDp3OkAkINNuxObYpAXD2mls6A3BLDaipfP/Ae/sYRxkDf+6dpZxlFMFG9eZBA8u18lE/cwm37fpJTfaj2HW0GIeC27OTGmf/aYyYxrLTyP0z3LP5Xe93TWjpkOdxbIgrmtFeXc4ut/ebl/vfJ4IjqXJ/x4FM4571KwPm/Xz3pybcwYyj6MjvdmSbAtYEdXpMPHhHTDcsqQH3RCpEjOrNPe4FBWZBXXjhKGg48u9YAhyZgF/+YoQKz8wb9GNJJs3qY7+JzlPeaPuU+qzm2sf8FyNkd0dz+SNuDfZ8JVg0yieyOhqJC1VvUBgVcBdWrE7FRq/u59uz3r6Qb9f7NMjjFtfeVI/H4SVGoVjY/MxxdOF4VSzteUHQNWNGdIyNUMQ42CUdinV1XrNS2RaAKiOyyoL6kgZKL0ao9D/BM7mpvubsG4D2hqDGpNj1QLajSMGJLrgXHGPQg1vH9ymqb6DTEBzpTDnkaqdb4p51GaNr8wBFw1o1eC7UdTTye2An9YxKpyBIVw31RJG5J2/65yVWXFpWPRf/Ftjd98dRzdEDBKqBoACqnpVt037W9wQFOqkDbkun5q6QcTeYWwGw2qwIjuoEhT2oWWdmRJM7ayeQrjFN7oyTe5R+Jh4s1R2N2GazwaGCiNMG6bc7kgIHFW+CV+qeqQC1HZpLuTqrxq2EtSxERe3ZPsHhADILVrT7PvVF+BkPIPB2SDeGNgHCBM32BKdDAWgbbKnBN/jYdAUmTomEChx6CNW3zAvOMYANA2Y9FCUFs20MzBOR12MHtuLEAKy5Y2akiAR7BNRebz001Eo7FL3/kUIeimewp7dTz9jzw/38GzD0HQDZUcOaYeCU1PkO6HVn388cDayPvs/OdDL0LbFxQ8G81ZPvlPkNouq2Lo49gN602l1qJkCZ49WDrUZ0xuB6ZMZqOjwHUBvlaAICP+THLYc5QeTM5PtfDZN9kw62wxDABj9yN9syCQuCs9vFo4eGVsPDpUPpDOefvy5B38eMl/1vDvt/FRDc26Xwu5DQXhZX/w5QhlsOhJY4CgC52HjzPwbOXqBqfLN4NldfOqD572VeHj/GqPtpz3g+pMEYfmwtZe0FWBdT8OovJpO190uQ6t/qIngfpHqWALiNcVDHjxDYa+TWJ+7wONLKYHMobjHrbKuoQQQGLVCM7ejzNHpv/gNA+QAmPwShf+adAVz/QmjmOBQY3L9PGvrNsJYUwVnl5UH/fX7HDPGbfX0yR5fyWxfZ24ycAOWtxwBYEhRq6rI+qo/pfP5DwDb9zmytdIdfDgGu6MSf7kuith4x1kbfpY3ivE6L4XLUQRgsYxxqapYS5NQxSItla8Md3Hybf40R+Rqv279LCrhiiSax2dFOf/750z/+658BAAD//+UP9yY=")
+	unpacked := packer.MustUnpack("eJy8mFt3qziWx9/nY5zXmTUD4jhT9Fr1YEiBwQ45Jokk9IYkG7AlTAV8gV793XuJiw3OSVWd6u56yEpMhLQv/733T/77l7LYsP/b5Lw4ZHn1v7UUX/72hUqnIq+HJESzPXPNgubr5A3AHcd+wRf7ZQT0/XNmCSrDMwXiyG29ISjQmRTaZl2kLA8LIp0dfzwk5LZHRVwI7DwQLCdFBN4evMfIeH5MlhFIRQSqbYxmDXedkj4elqsXS2xcuMOAFNR9e7CzeeLZ1jnC4eE5m2fjfdnNtqxflzLJm+fkkHj2PFm9zDMuYR0jMvP6Z9wVFUGmrmx8auZL5poNd9R+gRahS/mcHCrPhV8JCrZEipK8HpbqPW9hpdxNHjzb/77/L163znVqYjz1ds8rz/ave3sju1Yvus5cXkcoFHfPa4KDE8f+juCnbLTPJ+dO1h83Upy/52uwm5/t3KoJNHUqxZEZYUrd84OdaQnBqYh0U8boIobYMdfR4sdD4kl4JAvrFKOZtsKBiAxYxzi8xjPCfs6aPkZDzNHsg88fbfF16sKmizcpNo7Z8IUvIqQ9eIvKtPvndBEKJkwQoYtO8BBXqyHoIiIjPLHdIYnR7Mxx2PT/eyd4/+Atwhlz3/rckZQuoLjZqY31uWxjIEXJXVhj427tIhDUhTvumvVzZhU0t3S+eOpzXYnNa6v1NJIXQea9r9IpOYIjHVoay6GY+LT7uP/EPrUfXl8/T32cV55r6nxh6Xx+PaMmmBQMiBNNDksOUkF3h+TFdZo1ms2WNpfUhYLbrPDsSHq/pCnThEaQ3ixt+P8IiCNbQI3purl8mUs/s7wIB88R0gUzrDQCbwcf9GfarPRsLqjrNNwVOwZgymRw8Ov98sv/dK1lm4kN3cQfWosqKeSLCK+HdtLKLpIw5fOiK9/Mol6mO152Trw8EHwBzyspSvoyE1Q6GXXh/htSaQpEu+Z+bR4Kiq0ywqFYSXiMkF8StDaJdEoG3rKVPc9Wb91vipxjhLigCB65PasoCMU3nFTMdXZxrfch80rP9qrwRf32qwjNUgJgRVRJjPbnC18nL5O1JQU8j9EsX8mL4BKW31AoohzmntCWEfa1GJE0MtYPnqtiEjartu3BjCBH+90SyVpZ/EpQoGEgjsSFXwfJ8YU4q3hT18zZuW2rBZWFKpktM8KaIKfChlVTEAhmBKerHF3ziEFwopKUMQq0TvKqdYfbCBGN4L7NdeX14LmXEzGe2hKiyDnft4+70qw5ukzKMALmeQPNlLqXLXfNLXVFwx9v7cSzLY02h2SwmZ0PyfV/H209UmCe+xJpfwhOdwRbWqupPNCYhCnFT23uY7Ruf1/Lt82zf2bS3BEcNNTwG5WnO1s1qptljANt8LWzRZWSyssopvnTn/XjFnMJJTX8rnUs1Aho66jPFakp0B48ty/d89Bqf7o9M64+L/tWrzE1op3OBwy6FvBZ3u7tjXEo6OtHPyZndnqrIjy/G9937XNx1fetTUrnyMAl5dfRP5/Y1ep6PY6dnrKFdWun1+etLjt9jmNtz9ua6Ed7+/f4HM+2VJ0eud2Pw8wqKWB3e0PQ1r4RaMQVx+fMargbFjSZnkMwETRfn7gbnJ8zS4uM+Sf7wD1TvqHwfGeLOvtEXHMXA6jGz56C4P1ag2Nfa7MmKCyYbjbUNQ3l13Nmdc++4//KCGYMXE6k1aRoRnHodIZMQKDZjtKxTTGAs+fM0hmAW2pATeX7B97bRzhMGfhz76zkLKUINqo3Dxpoxx7ST1zCbbt+UpP9eHYdLcKB4PbsqMbZfxotprHsNHL7DPfsNrJHmtCSIc/j2BBXNKO9upydr+83T7e/jwSHUuX+hgipxhfWrwyYt/Pdn5pgB1OOwmKEDukmhzVBnR7jBbxhpxuU1IB7IhU2hvXmFvecAjOnLjxz5DcceTdUAY6MwS9/MVYFJ7YY9GNJJs3qY78JT1PeaPuU+qzm2sf85yOMd0dz+XMEeydYNMonsi6M2IWqNyiM8rkLK1YnYqNXt/PtWW9fwLcv+8TPohbXXlWPx8E5QoFY2vzEcXjmeJ2v7HlO0CVlRlhERiAi7O/iDsW6Oq9ZqWzzQZUSWaV+fU58pRcjUPqf4JncVO8Z+w6gvSKoMSl2PZDtKFJwogu+8IsI9ODWMX+C6ivoNASHOlMOudrxmrhHXUbo0txB0bBWDZ4zdR2N/B7YST2l0skJ0lVDPVJk7smr/nWFFZeWVc/KvwV2t/1xWHN0B4FqICiAqmdl27Qf9T1Bvk5qn9vSqbkrZNQN5lYArDYrgsM6RkEPataJGeHkHtsJpGtMk3vk5G6ln8gClureRmyz2eBAQcRxg/TrvUmBg4o3wWt191SA2g7NlVyfVONWwlrloqL2bB/jYACZJcvbfR/6IvyKBxB4PSQbQ5sAYYxme4KToQC0DbbU4Bt8bLoCE8dYQgUOPYTqW7bwTxGADQNmPRQlBbNtBMwjkZeiA1txZADW3DFTkoeC3QNqr7ceGmqlHYre/kghD8Uz2NPbqafs8e7O/h0Y+gRAdtSwZhg4JXU+Ab3u7NuZo4H10ffZiU6GviU2biDYYv3gOWV2hai6rYuiB9CrVrtLzQQoM7y+s9UITxhcCmasp8NzALVRjiYg8EN+XHOYEUROTL791TDZN2l/OwwBbPCCu+mWSZgTnF4vHj00tBoeLh1KZzj7+r4CfR8znva/Oez/VUBwr5fCTyGhvSyu/x2gDLccCC12FABysVnM/xg4L3xV45vlo7n+1gHNf6+ysvgYo+6nPePxkPhj+LG1hLUXYF1Mwau/mEzW3i5Bqn+ri+BtkOppDOA2wn4d3UNgr5Frn7jB40grg82BuMass62iBhEYtEAxtqPP0+i9+Q8A5R2Y/BCE/pl3BnD9C6GZ40BgcAWc5dBvhrUk908qL3f67/M7Zojf7OuTObqS37vIXmfkBCivPQbAkqBAU5f1UX1M5/MfArbpd2YvSnf46eDjik786b4kausRY230Xdoozi9JPlyOOgiDZYQDTc1Sgpw6Akm+am24gZtn8/cIkffopf27pIArlmhimxV28vPPX/7xX/8MAAD//3jh/kY=")
 	SupportedMap = make(map[string]Spec)
 
 	for f, v := range unpacked {
