@@ -1,3 +1,4 @@
+revision: 5
 fleet:
   agent:
     id: fleet-agent-id
