@@ -45,6 +45,7 @@
 - Guard against empty stream.datasource and namespace {pull}18769[18769]
 - Fix install service script for windows {pull}18814[18814]
 - Properly stops subprocess on shutdown {pull}19567[19567]
+- Forward revision number of the configuration to the endpoint. {pull}19759[19759]
 
 ==== New features
 
